<resources>
    <string name="app_name">SurveyHelper</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="login_title">Login</string>
    <string name="create_act">Create Account</string>
    <string name="send_password_reset_email">Reset Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="menu_options">Options</string>
    <string name="menu_logout">Logout</string>
    <string name="link">Link</string>
    <string name="category">Category</string>
    <string name="title">Title</string>
    <string name="submit_survey">Submit Survey</string>
    <string name="sv_title">Title</string>
    <string name="new_survey">Create New Survey</string>
    <string name="follow_link">Follow Link</string>
    <string name="survey_insert">Please insert your data</string>
    <string name="survey_available">Evaluation date:</string>
    <string name="pw_email">Type in your Email</string>
    <string name="welcome">Welcome</string>
    <string name="survey_helper">Survey Helper</string>
</resources>
