<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/create_account_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"

    tools:context=".accountactivities.CreateAccountActivity">

    <TextView
        android:id="@+id/greeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:textColor="#434B4D"
        android:layout_marginTop="120dp"
        android:layout_marginBottom="60dp"
        android:textSize="40sp"
        android:gravity="center"
        android:text="@string/welcome"
        />



    <EditText
        android:id="@+id/et_first_name"
        style="@style/viewCustom"
        android:ems="10"
        android:hint="@string/first_name"
        android:inputType="textPersonName"
        android:layout_below="@id/greeting"/>

    <EditText
        android:id="@+id/et_last_name"
        style="@style/viewCustom"
        android:layout_below="@id/et_first_name"
        android:ems="10"
        android:hint="@string/last_name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/et_email"
        style="@style/viewCustom"
        android:layout_below="@id/et_last_name"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/et_password"
        style="@style/viewCustom"
        android:layout_below="@id/et_email"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btn_register"
        style="@style/viewCustom"
        android:layout_below="@id/et_password"
        android:background="@android:color/holo_red_light"
        android:text="@string/create_act"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

</RelativeLayout>