<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/login_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <TextView
        android:id="@+id/appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp"
        android:layout_marginBottom="100dp"
        android:gravity="center"
        android:text="@string/survey_helper"
        android:textColor="#434B4D"
        android:textSize="60sp"
        android:textStyle="bold"
        android:typeface="monospace" />


    <EditText
        android:id="@+id/et_email"
        style="@style/viewCustom"
        android:layout_marginTop="57dp"
        android:layout_below="@id/appName"
        android:autofillHints="email"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/et_password"
        style="@style/viewCustom"
        android:layout_below="@id/et_email"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:autofillHints="password" />

    <Button
        android:id="@+id/btn_login"
        style="@style/viewCustom"
        android:layout_below="@id/et_password"
        android:background="@android:color/holo_red_light"
        android:text="@string/login_title"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_forgot_password"
        style="@style/viewCustom"
        android:layout_below="@id/btn_login"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="250dp"
        android:layout_marginEnd="5dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_horizontal"
        android:text="@string/forgot_password"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btn_register_account"
        style="@style/viewCustom"
        android:layout_alignParentBottom="true"
        android:background="@android:color/holo_red_light"
        android:text="@string/create_act"
        android:textColor="@android:color/white"
        android:textStyle="bold" />


</RelativeLayout>