<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/forgotpw_layout"
    tools:context=".accountactivities.ForgotPasswordActivity" >


    <TextView
        android:id="@+id/forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="60dp"
        android:textColor="#434B4D"
        android:textStyle="bold"
        android:textSize="30sp"
        android:gravity="center"
        android:text="@string/pw_email"

        />

    <EditText
        android:id="@+id/et_email"
        style="@style/viewCustom"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:autofillHints="email"
        android:layout_below="@id/forgotPassword"/>

    <Button
        android:id="@+id/btn_submit"
        style="@style/viewCustom"
        android:layout_below="@id/et_email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="237dp"
        android:background="@android:color/holo_red_light"
        android:text="@string/send_password_reset_email"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

</RelativeLayout>